<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Instagram</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_compartilhar">Compartilhar</string>
    <string name="botao_login">Logar</string>
    <string name="crie_conta">Não tem conta ? Crie uma</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="campo_usuario">Digite seu usuario</string>
    <string name="campo_senha">Digite sua senha</string>
    <string name="campo_email">Digite seu email</string>
    <string name="faca_login">Ja tem conta ? Faça login</string>

</resources>
