<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    tools:context="com.parse.starter.activity.CadastroActivity"
    android:gravity="center_vertical|center_horizontal">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/usuario" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="25dp"
            android:background="@drawable/fundo_caixa_texto"
            android:ems="10"
            android:hint="@string/campo_usuario"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText3"
            android:layout_marginTop="25dp"
            android:background="@drawable/fundo_caixa_texto"
            android:ems="10"
            android:hint="@string/campo_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText4"
            android:layout_marginTop="25dp"
            android:background="@drawable/fundo_caixa_texto"
            android:ems="10"
            android:hint="@string/campo_senha"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText5"
            android:layout_marginTop="25dp"
            android:text="@string/botao_cadastrar"
            android:background="@drawable/fundo_botao"/>

        <TextView
            android:id="@+id/cadastrar_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/faca_login" />

    </RelativeLayout>

</RelativeLayout>
